<resources>
    <string name="app_name">Raiden-Multiplayer</string>
    <string name="title_text">Raiden-Multiplayer\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="please_sign_in">Please Sign In First to Play</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInMenu</string>
    <string name="desc_sign_in_activity">Manange your account.</string>
    <string name="name_play_launcher">PlayActivity</string>
    <string name="desc_play_launcher">Play the game.</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>


    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">858374538926-5c75dr7bpou01jehvq1jkbotqpvsj0o1.apps.googleusercontent.com</string>

    <!-- nav string -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="play">Play</string>
    <string name="pve_singleplayer">PVE Singleplayer</string>
    <string name="pvp_multiplayer">PVP Multiplayer</string>
    <string name="pve_multiplayer">PVE Multiplayer</string>
    <string name="exit">Exit</string>
    <string name="hangar">Hangar</string>
    <string name="see_invitations">See Invitations</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="quick_start_game">Quick Start Game</string>
    <string name="settings">Settings</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="Vibration">Vibration</string>
    <string name="response">Response</string>
    <string name="volume">Volume</string>
    <string name="sensibility">Sensibility</string>


    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>


    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_email">android.studio@android.com</string>

    <string name="banner_ad_unit_id">ca-app-pub-1239322117847811/1959135085</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="LEADERBOARD_ID">CgkIro3w2P0YEAIQAQ</string>
    <string name="achievement_first_run">CgkIro3w2P0YEAIQAg</string>
    <string name="sensibility_Y">Sensibility Y</string>
    <string name="sensibility_X">Sensiblility X</string>
    <string name="share">Share</string>
    <string name="management">Management</string>
    <string name="slideshow">Slideshow</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="achievements">Achievements</string>

</resources>
